[gd_scene load_steps=5 format=3 uid="uid://ce8i8s62pnh4v"]

[ext_resource type="Script" path="res://scripts/environment/lever.gd" id="1_84yq4"]
[ext_resource type="Texture2D" uid="uid://cyfbpk4slflan" path="res://assets/art/lever.png" id="2_y7fa4"]
[ext_resource type="AudioStream" uid="uid://d18uwuub0h44s" path="res://assets/audio/Handles/Handle_Switches.wav" id="3_4x4de"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0v72"]
size = Vector2(25.5, 17.75)

[node name="Lever" type="Area2D"]
position = Vector2(159, -43)
script = ExtResource("1_84yq4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y7fa4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_t0v72")

[node name="Pull" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4x4de")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="lever_triggered" from="." to="." method="_on_lever_triggered"]
